# altmanager-tauri

./: .gitignore  package-lock.json  package.json
.github/: dependabot.yaml
.github/workflows/: release.yaml
scripts/: setup-dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
